; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_surface.c_RB_CheckVao.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_surface.c_RB_CheckVao.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }
%struct.TYPE_3__ = type { i32, i32*, i32, i32, i32 }

@glState = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@tess = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@qfalse = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RB_CheckVao(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @glState, i32 0, i32 0), align 8
  %5 = icmp ne i32* %3, %4
  br i1 %5, label %6, label %14

6:                                                ; preds = %1
  %7 = call i32 (...) @RB_EndSurface()
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @tess, i32 0, i32 4), align 8
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @tess, i32 0, i32 3), align 4
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @tess, i32 0, i32 2), align 8
  %11 = call i32 @RB_BeginSurface(i32 %8, i32 %9, i32 %10)
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @R_BindVao(i32* %12)
  br label %14

14:                                               ; preds = %6, %1
  %15 = load i32*, i32** %2, align 8
  %16 = load i32*, i32** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @tess, i32 0, i32 1), align 8
  %17 = icmp ne i32* %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = load i32, i32* @qfalse, align 4
  store i32 %19, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @tess, i32 0, i32 0), align 8
  br label %20

20:                                               ; preds = %18, %14
  ret void
}

declare dso_local i32 @RB_EndSurface(...) #1

declare dso_local i32 @RB_BeginSurface(i32, i32, i32) #1

declare dso_local i32 @R_BindVao(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
